# yolov8

cpp/: CMakeLists.txt  build-linux.sh  main.cc  postprocess.cc  postprocess.h  test_fire_images.sh  yolov8.h
cpp/install/rk3588_linux_aarch64/atk_rknn_yolov8_cam/: rknn_yolov8_cam
cpp/install/rk3588_linux_aarch64/atk_rknn_yolov8_cam/model/: text.txt
model/: coco_80_fire_labels_list.txt  yolov8_8cls.rknn
